# geekflash

./: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: build.yml
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: avb_signer.rs  config.rs  device.rs  executor.rs  flasher.rs  gpt_fixer.rs  lib.rs  main.rs  models.rs
src-tauri/tests/: config_test.rs
src/components/: AvbSignTab.tsx  FilePickerField.tsx  FlashBootTab.tsx  GptFixTab.tsx  LogPanel.tsx  RestoreBootTab.tsx  StatusBar.tsx
src/hooks/: useActionValidation.ts  useConfig.ts  useDeviceStatus.ts  useLogStream.ts
