[package]
name = "geekflash"
version = "0.1.0"
description = "GeekFlash — Y700 EDL Flash Tool"
authors = ["GeekFlash"]
edition = "2021"

[lib]
name = "geekflash_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
proptest = "1"
tempfile = "3"

[features]
custom-protocol = ["tauri/custom-protocol"]
